try to fix upload avatar on iphone

--- a/public/css/settings.css
+++ b/public/css/settings.css
@@ -270,13 +270,7 @@
 }
 
 .settingsss .add-ava #avatarImg {
-    width: 100%;
-    height: 100%;
-    opacity: 0;
     display: none;
-    overflow: hidden;
-    position: absolute;
-    padding: 0 0;
 }
 
 /*          download avatar   end    */
